Adding respect for default recalc value to all other operations

--- a/rollup/core/classes/RollupCalculator.cls
+++ b/rollup/core/classes/RollupCalculator.cls
@@ -354,7 +354,7 @@ public without sharing abstract class RollupCalculator {
       List<SObject> allOtherItems = this.tryQuery(sObjectType, queryFields, objIds);
       if (allOtherItems.isEmpty()) {
         // break out of recursion if there's nothing to calculate
-        this.returnVal = null;
+        this.returnVal = this.defaultVal;
       } else {
         Rollup.Op baseOp = Rollup.Op.valueOf(Rollup.getBaseOperationName(op.name()));
         RollupCalculator calc = Factory.getCalculator(baseOp, this.opFieldOnCalcItem, this.opFieldOnLookupObject, this.metadata, this.lookupKeyField);
@@ -459,7 +459,7 @@ public without sharing abstract class RollupCalculator {
       Boolean isGroupable = isArchivable == false && this.opFieldOnCalcItem.getDescribe().isGroupable();
       List<String> queryFields = new List<String>{ String.valueOf(this.opFieldOnCalcItem) };
       if (isGroupable) {
-        queryFields.add(this.isIdCount ? 'COUNT()' : 'COUNT(Id)');
+        queryFields.add('COUNT(' + (this.isIdCount ? '' : 'Id') + ')');
       }
 
       String query =
@@ -1108,7 +1108,7 @@ public without sharing abstract class RollupCalculator {
         newSum += potentialDecimal == null ? 0.00 : (Decimal) potentialDecimal;
       }
 
-      Decimal average = null;
+      Decimal average = (Decimal) this.defaultVal;
       // We can't do the division if the denominator is 0
       if (denominator != 0) {
         Decimal numerator = oldSum + newSum;
@@ -1126,19 +1126,7 @@ public without sharing abstract class RollupCalculator {
       Rollup__mdt metadata,
       SObjectField lookupKeyField
     ) {
-      super(
-        op,
-        opFieldOnCalcItem,
-        opFieldOnLookupObject,
-        // first/last could possibly use either default value
-        // we also have to cast to Object to avoid the compilation error:
-        // "Incompatible types in ternary operator: String, Decimal"
-        (metadata.FullRecalculationDefaultNumberValue__c != null
-          ? (Object) metadata.FullRecalculationDefaultNumberValue__c
-          : (Object) metadata.FullRecalculationDefaultStringValue__c),
-        metadata,
-        lookupKeyField
-      );
+      super(op, opFieldOnCalcItem, opFieldOnLookupObject, getDefaultRecalculationValue(metadata), metadata, lookupKeyField);
       Map<String, SObjectField> fieldMap = this.calcItemSObjectType.getDescribe().fields.getMap();
       for (RollupOrderBy__mdt orderByInfo : this.metadata.RollupOrderBys__r) {
         SObjectField orderByFirstLastField = fieldMap.get(orderByInfo.FieldName__c);
@@ -1197,14 +1185,13 @@ public without sharing abstract class RollupCalculator {
       Rollup__mdt metadata,
       SObjectField lookupKeyField
     ) {
-      super(op, opFieldOnCalcItem, opFieldOnLookupObject, null, metadata, lookupKeyField);
+      super(op, opFieldOnCalcItem, opFieldOnLookupObject, getDefaultRecalculationValue(metadata), metadata, lookupKeyField);
     }
-    // TODO default full recalc value support
 
     public override void performRollup(List<SObject> calcItems, Map<Id, SObject> oldCalcItems) {
       this.occurrenceToCount.clear();
       this.largestCountPointer = -1;
-      this.returnVal = null;
+      this.returnVal = this.defaultVal;
       List<SObject> localCalcItems = this.winnowItems(calcItems, oldCalcItems);
 
       for (SObject calcItem : localCalcItems) {
@@ -1230,9 +1217,8 @@ public without sharing abstract class RollupCalculator {
       Rollup__mdt metadata,
       SObjectField lookupKeyField
     ) {
-      super(op, opFieldOnCalcItem, opFieldOnLookupObject, null, metadata, lookupKeyField);
+      super(op, opFieldOnCalcItem, opFieldOnLookupObject, getDefaultRecalculationValue(metadata), metadata, lookupKeyField);
     }
-    // TODO default full recalc value support
 
     public override void performRollup(List<SObject> calcItems, Map<Id, SObject> oldCalcItems) {
       this.returnVal = null;
@@ -1248,6 +1234,11 @@ public without sharing abstract class RollupCalculator {
         }
       }
 
+      if (this.defaultVal != null && matches == false) {
+        this.returnVal = this.defaultVal;
+        return;
+      }
+
       switch on this.opFieldOnLookupObject.getDescribe().getType() {
         when CURRENCY, DOUBLE, INTEGER {
           this.returnVal = matches ? 1 : 0;
@@ -1260,5 +1251,14 @@ public without sharing abstract class RollupCalculator {
         }
       }
     }
+  }
+
+  private static Object getDefaultRecalculationValue(Rollup__mdt meta) {
+    // some operations could possibly use either default value
+    // we also have to cast to Object to avoid the compilation error:
+    // "Incompatible types in ternary operator: String, Decimal"
+    return (meta.FullRecalculationDefaultNumberValue__c != null
+      ? (Object) meta.FullRecalculationDefaultNumberValue__c
+      : (Object) meta.FullRecalculationDefaultStringValue__c);
   }
 }
